--- a/potential-map.html
+++ b/potential-map.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>ナビエストーク法</title>
+    <title>ポテンシャル法</title>
     
     <link rel="stylesheet" href="css/style.css"/>
 	<script src="js/three.js"></script>
